--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,8 +1,8 @@
 {
   "meta": {
-    "username": "xzxiong",
+    "username": "zqxiong",
     "repositoryName": "xiongziqi.gibhub.com",
-    "branch": "master"
+    "branch": "gh-pages"
   },
   "theme": {
     "name": "Casper"
