--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
     "username": "zqxiong",
-    "repositoryName": "xiongziqi.github.com",
+    "repositoryName": "zqxiong.github.com",
     "branch": "master"
   },
   "theme": {
